<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_trip_history"
            android:icon="@drawable/ic_nav_history"
            android:title="@string/nav_trip_history" />

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_nav_payment"
            android:title="@string/nav_payment" />
    </group>

    <item android:title="Support">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_nav_settings"
                android:title="@string/nav_settings" />

            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_nav_support"
                android:title="@string/nav_support" />
        </menu>
    </item>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_driver"
                android:icon="@drawable/ic_nav_driver"
                android:title="@string/nav_driver" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_nav_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>